Bug 392240 - Krita crashing while clicking save in text edit tool
Summary: Krita crashing while clicking save in text edit tool
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2018-03-23 16:16 UTC by Mateusz Przybyłowicz
Modified: 2018-04-03 11:46 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mateusz Przybyłowicz 2018-03-23 16:16:16 UTC
Application: krita (4.0.0)

Qt Version: 5.10.0
Frameworks Version: 5.44.0
Operating System: Linux 4.15.0-11.1-liquorix-amd64 x86_64
Distribution: KDE neon User Edition 5.12

-- Information about the crash:
- What I was doing when the application crashed:
I was changing colors, spacing in text edit tool and clicked "Save" button, I've managed to reproduce this error once before, I've used "Enter" key in text tool to add some space and clicked "Save"

The crash can be reproduced sometimes.

-- Backtrace:
Application: Krita (krita), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fbbfec2c900 (LWP 32145))]

Thread 15 (Thread 0x7fbbad442700 (LWP 32179)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fbbd918dd7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007fbbd918da88 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007fbbf50406ba in start_thread (arg=0x7fbbad442700) at pthread_create.c:333
#4  0x00007fbbfb5c341d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 14 (Thread 0x7fbba7fff700 (LWP 32178)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fbbd918dd7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007fbbd918da88 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007fbbf50406ba in start_thread (arg=0x7fbba7fff700) at pthread_create.c:333
#4  0x00007fbbfb5c341d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 13 (Thread 0x7fbba77fe700 (LWP 32177)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fbbd918dd7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007fbbd918da88 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007fbbf50406ba in start_thread (arg=0x7fbba77fe700) at pthread_create.c:333
#4  0x00007fbbfb5c341d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 12 (Thread 0x7fbbc74c4700 (LWP 32160)):
#0  0x00007ffd6a7e0a09 in ?? ()
#1  0x00007ffd6a7e0cba in clock_gettime ()
#2  0x00007fbbfb5d1876 in __GI___clock_gettime (clock_id=clock_id@entry=1, tp=tp@entry=0x7fbbc74c3a00) at ../sysdeps/unix/clock_gettime.c:115
#3  0x00007fbbfc0ffed1 in qt_clock_gettime (ts=0x7fbbc74c3a00, clock=<optimized out>) at kernel/qelapsedtimer_unix.cpp:111
#4  do_gettime (frac=<synthetic pointer>, sec=<synthetic pointer>) at kernel/qelapsedtimer_unix.cpp:166
#5  qt_gettime () at kernel/qelapsedtimer_unix.cpp:175
#6  0x00007fbbfc0fe6c9 in QTimerInfoList::updateCurrentTime (this=this@entry=0x7fbbb0002cd0) at kernel/qtimerinfo_unix.cpp:91
#7  0x00007fbbfc0fec35 in QTimerInfoList::timerWait (this=0x7fbbb0002cd0, tm=...) at kernel/qtimerinfo_unix.cpp:388
#8  0x00007fbbfc10033e in timerSourcePrepareHelper (timeout=0x7fbbc74c3ad4, src=<optimized out>) at kernel/qeventdispatcher_glib.cpp:132
#9  timerSourcePrepare (source=<optimized out>, timeout=0x7fbbc74c3ad4) at kernel/qeventdispatcher_glib.cpp:165
#10 0x00007fbbf37d991d in g_main_context_prepare () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#11 0x00007fbbf37da2bb in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#12 0x00007fbbf37da49c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#13 0x00007fbbfc1005cb in QEventDispatcherGlib::processEvents (this=0x7fbbb00008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#14 0x00007fbbfc0a764a in QEventLoop::exec (this=this@entry=0x7fbbc74c3ca0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#15 0x00007fbbfbec7554 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#16 0x00007fbbe05cca35 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Qml.so.5
#17 0x00007fbbfbecc6eb in QThreadPrivate::start (arg=0xb1e7060) at thread/qthread_unix.cpp:376
#18 0x00007fbbf50406ba in start_thread (arg=0x7fbbc74c4700) at pthread_create.c:333
#19 0x00007fbbfb5c341d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 11 (Thread 0x7fbbb68eb700 (LWP 32159)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fbbfbecd67b in QWaitConditionPrivate::wait (time=18446744073709551615, this=0xa89b150) at thread/qwaitcondition_unix.cpp:143
#2  QWaitCondition::wait (this=<optimized out>, mutex=mutex@entry=0xa89b130, time=18446744073709551615) at thread/qwaitcondition_unix.cpp:215
#3  0x00007fbbfbec61ef in QSemaphore::tryAcquire (this=0xa8948d0, n=n@entry=1, timeout=timeout@entry=-1) at thread/qsemaphore.cpp:229
#4  0x00007fbbf914f4b3 in KisTileDataSwapper::waitForWork (this=this@entry=0x7fbbf9651cc0 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder+64>) at /workspace/build/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:86
#5  0x00007fbbf914f6aa in KisTileDataSwapper::run (this=0x7fbbf9651cc0 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder+64>) at /workspace/build/libs/image/tiles3/swap/kis_tile_data_swapper.cpp:92
#6  0x00007fbbfbecc6eb in QThreadPrivate::start (arg=0x7fbbf9651cc0 <(anonymous namespace)::Q_QGS_s_instance::innerFunction()::holder+64>) at thread/qthread_unix.cpp:376
#7  0x00007fbbf50406ba in start_thread (arg=0x7fbbb68eb700) at pthread_create.c:333
#8  0x00007fbbfb5c341d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 10 (Thread 0x7fbbcf63a700 (LWP 32155)):
#0  0x00007fbbfb5b774d in poll () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007fbbf37da38c in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fbbf37da49c in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fbbfc1005cb in QEventDispatcherGlib::processEvents (this=0x7fbbc80008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#4  0x00007fbbfc0a764a in QEventLoop::exec (this=this@entry=0x7fbbcf639c90, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#5  0x00007fbbfbec7554 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#6  0x00007fbbf526c2c5 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5DBus.so.5
#7  0x00007fbbfbecc6eb in QThreadPrivate::start (arg=0x7fbbf54e0d60) at thread/qthread_unix.cpp:376
#8  0x00007fbbf50406ba in start_thread (arg=0x7fbbcf63a700) at pthread_create.c:333
#9  0x00007fbbfb5c341d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 9 (Thread 0x7fbbd02d4700 (LWP 32154)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fbbd918dd7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007fbbd918da88 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007fbbf50406ba in start_thread (arg=0x7fbbd02d4700) at pthread_create.c:333
#4  0x00007fbbfb5c341d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 8 (Thread 0x7fbbd0ad5700 (LWP 32153)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fbbd918dd7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007fbbd918da88 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007fbbf50406ba in start_thread (arg=0x7fbbd0ad5700) at pthread_create.c:333
#4  0x00007fbbfb5c341d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 7 (Thread 0x7fbbd12d6700 (LWP 32152)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fbbd918dd7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007fbbd918da88 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007fbbf50406ba in start_thread (arg=0x7fbbd12d6700) at pthread_create.c:333
#4  0x00007fbbfb5c341d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 6 (Thread 0x7fbbd1ad7700 (LWP 32151)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fbbd918dd7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007fbbd918da88 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007fbbf50406ba in start_thread (arg=0x7fbbd1ad7700) at pthread_create.c:333
#4  0x00007fbbfb5c341d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 5 (Thread 0x7fbbd22d8700 (LWP 32150)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fbbd918dd7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007fbbd918da88 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007fbbf50406ba in start_thread (arg=0x7fbbd22d8700) at pthread_create.c:333
#4  0x00007fbbfb5c341d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 4 (Thread 0x7fbbd2ad9700 (LWP 32149)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fbbd918dd7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007fbbd918da88 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007fbbf50406ba in start_thread (arg=0x7fbbd2ad9700) at pthread_create.c:333
#4  0x00007fbbfb5c341d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 3 (Thread 0x7fbbd32da700 (LWP 32148)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fbbd918dd7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007fbbd918da88 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007fbbf50406ba in start_thread (arg=0x7fbbd32da700) at pthread_create.c:333
#4  0x00007fbbfb5c341d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7fbbd4243700 (LWP 32147)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fbbd918dd7b in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#2  0x00007fbbd918da88 in ?? () from /usr/lib/x86_64-linux-gnu/dri/radeonsi_dri.so
#3  0x00007fbbf50406ba in start_thread (arg=0x7fbbd4243700) at pthread_create.c:333
#4  0x00007fbbfb5c341d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7fbbfec2c900 (LWP 32145)):
[KCrash Handler]
#6  0x00007fbbf87e7a81 in SvgWriter::saveGeneric (this=<optimized out>, shape=0x0, context=...) at /workspace/build/libs/flake/svg/SvgWriter.cpp:241
#7  0x00007fbbf87e8b9e in SvgWriter::saveShapes (this=this@entry=0x7ffd6a647e30, shapes=..., savingContext=...) at /workspace/build/libs/flake/svg/SvgWriter.cpp:164
#8  0x00007fbbf87e90d7 in SvgWriter::saveDetached (this=this@entry=0x7ffd6a647e30, savingContext=...) at /workspace/build/libs/flake/svg/SvgWriter.cpp:147
#9  0x00007fbbf883c653 in KoSvgTextShapeMarkupConverter::convertToSvg (this=this@entry=0x7ffd6a647eb0, svgText=svgText@entry=0xf853138, stylesText=stylesText@entry=0xf853140) at /workspace/build/libs/flake/text/KoSvgTextShapeMarkupConverter.cpp:91
#10 0x00007fbbbce04281 in SvgTextChangeCommand::SvgTextChangeCommand (this=0xf8530f0, shape=<optimized out>, svg=..., defs=..., parent=<optimized out>) at /workspace/build/plugins/tools/svgtexttool/SvgTextChangeCommand.cpp:39
#11 0x00007fbbbce11265 in SvgTextTool::textUpdated (this=0xc2a7f00, svg=..., defs=...) at /workspace/build/plugins/tools/svgtexttool/SvgTextTool.cpp:181
#12 0x00007fbbbce170ed in SvgTextTool::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /workspace/build/obj-x86_64-linux-gnu/plugins/tools/svgtexttool/moc_SvgTextTool.cpp:84
#13 0x00007fbbfc0d6489 in QMetaObject::activate (sender=sender@entry=0xb936d40, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffd6a648060) at kernel/qobject.cpp:3766
#14 0x00007fbbfc0d6d97 in QMetaObject::activate (sender=sender@entry=0xb936d40, m=m@entry=0x7fbbbd022c00 <SvgTextEditor::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x7ffd6a648060) at kernel/qobject.cpp:3628
#15 0x00007fbbbce16f77 in SvgTextEditor::textUpdated (this=this@entry=0xb936d40, _t1=..., _t2=...) at /workspace/build/obj-x86_64-linux-gnu/plugins/tools/svgtexttool/moc_SvgTextEditor.cpp:378
#16 0x00007fbbbce04539 in SvgTextEditor::save (this=0xb936d40) at /workspace/build/plugins/tools/svgtexttool/SvgTextEditor.cpp:197
#17 0x00007fbbbce1739b in SvgTextEditor::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /workspace/build/obj-x86_64-linux-gnu/plugins/tools/svgtexttool/moc_SvgTextEditor.cpp:260
#18 0x00007fbbfc0d6489 in QMetaObject::activate (sender=sender@entry=0x4d4b230, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x0) at kernel/qobject.cpp:3766
#19 0x00007fbbfc0d6d97 in QMetaObject::activate (sender=sender@entry=0x4d4b230, m=m@entry=0x7fbbfd4cc4a0 <QDialogButtonBox::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x0) at kernel/qobject.cpp:3628
#20 0x00007fbbfcf7f813 in QDialogButtonBox::accepted (this=this@entry=0x4d4b230) at .moc/moc_qdialogbuttonbox.cpp:281
#21 0x00007fbbfcf7fe50 in QDialogButtonBoxPrivate::_q_handleButtonClicked (this=<optimized out>) at widgets/qdialogbuttonbox.cpp:864
#22 0x00007fbbfc0d6489 in QMetaObject::activate (sender=sender@entry=0xf62e210, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7ffd6a648400) at kernel/qobject.cpp:3766
#23 0x00007fbbfc0d6d97 in QMetaObject::activate (sender=sender@entry=0xf62e210, m=m@entry=0x7fbbfd4c3380 <QAbstractButton::staticMetaObject>, local_signal_index=local_signal_index@entry=2, argv=argv@entry=0x7ffd6a648400) at kernel/qobject.cpp:3628
#24 0x00007fbbfcee09e2 in QAbstractButton::clicked (this=this@entry=0xf62e210, _t1=false) at .moc/moc_qabstractbutton.cpp:308
#25 0x00007fbbfcee0c14 in QAbstractButtonPrivate::emitClicked (this=0xf10d8e0) at widgets/qabstractbutton.cpp:414
#26 0x00007fbbfcee28be in QAbstractButtonPrivate::click (this=0xf10d8e0) at widgets/qabstractbutton.cpp:407
#27 0x00007fbbfcee2a3d in QAbstractButton::mouseReleaseEvent (this=0xf62e210, e=0x7ffd6a648930) at widgets/qabstractbutton.cpp:1011
#28 0x00007fbbfce28f88 in QWidget::event (this=0xf62e210, event=0x7ffd6a648930) at kernel/qwidget.cpp:9197
#29 0x00007fbbfcde9acc in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0xf62e210, e=0x7ffd6a648930) at kernel/qapplication.cpp:3732
#30 0x00007fbbfcdf203b in QApplication::notify (this=<optimized out>, receiver=receiver@entry=0xf62e210, e=e@entry=0x7ffd6a648930) at kernel/qapplication.cpp:3208
#31 0x00007fbbfe4ed717 in KisApplication::notify (this=<optimized out>, receiver=0xf62e210, event=0x7ffd6a648930) at /workspace/build/libs/ui/KisApplication.cpp:620
#32 0x00007fbbfc0a93c8 in QCoreApplication::notifyInternal2 (receiver=receiver@entry=0xf62e210, event=event@entry=0x7ffd6a648930) at kernel/qcoreapplication.cpp:1044
#33 0x00007fbbfcdf09df in QCoreApplication::sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#34 QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0xf62e210, event=event@entry=0x7ffd6a648930, alienWidget=alienWidget@entry=0xf62e210, nativeWidget=0xb936d40, buttonDown=buttonDown@entry=0x7fbbfd4ec880 <qt_button_down>, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:2711
#35 0x00007fbbfce42f4d in QWidgetWindow::handleMouseEvent (this=this@entry=0xf5c6840, event=event@entry=0x7ffd6a648db0) at kernel/qwidgetwindow.cpp:655
#36 0x00007fbbfce4597b in QWidgetWindow::event (this=0xf5c6840, event=0x7ffd6a648db0) at kernel/qwidgetwindow.cpp:273
#37 0x00007fbbfcde9acc in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0xf5c6840, e=0x7ffd6a648db0) at kernel/qapplication.cpp:3732
#38 0x00007fbbfcdf1417 in QApplication::notify (this=0x7ffd6a649510, receiver=receiver@entry=0xf5c6840, e=e@entry=0x7ffd6a648db0) at kernel/qapplication.cpp:3491
#39 0x00007fbbfe4ed717 in KisApplication::notify (this=<optimized out>, receiver=0xf5c6840, event=0x7ffd6a648db0) at /workspace/build/libs/ui/KisApplication.cpp:620
#40 0x00007fbbfc0a93c8 in QCoreApplication::notifyInternal2 (receiver=receiver@entry=0xf5c6840, event=event@entry=0x7ffd6a648db0) at kernel/qcoreapplication.cpp:1044
#41 0x00007fbbfc641ef0 in QCoreApplication::sendSpontaneousEvent (event=0x7ffd6a648db0, receiver=0xf5c6840) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:237
#42 QGuiApplicationPrivate::processMouseEvent (e=0xf7ebc40) at kernel/qguiapplication.cpp:1957
#43 0x00007fbbfc643e45 in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0xf7ebc40) at kernel/qguiapplication.cpp:1741
#44 0x00007fbbfc61d8fb in QWindowSystemInterface::sendWindowSystemEvents (flags=...) at kernel/qwindowsysteminterface.cpp:976
#45 0x00007fbbe5ae71ab in QPAEventDispatcherGlib::processEvents (this=0x2a8e450, flags=...) at qeventdispatcher_glib.cpp:70
#46 0x00007fbbfc0a764a in QEventLoop::exec (this=this@entry=0x7ffd6a649020, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#47 0x00007fbbfc0b0854 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1332
#48 0x00007fbbfc63983c in QGuiApplication::exec () at kernel/qguiapplication.cpp:1687
#49 0x00007fbbfcde9a25 in QApplication::exec () at kernel/qapplication.cpp:2917
#50 0x000000000040514f in main (argc=1, argv=<optimized out>) at /workspace/build/krita/main.cc:361

Reported using DrKonqi
Comment 1 Scott Petrovic 2018-03-25 17:08:15 UTC
I am not able to reproduce this (on KDE Neon). I have tried changing colors, changing line height, and pressing enter for new lines. Let us know if you can figure out how to make it crash more often with what you are doing.
Comment 2 Halla Rempt 2018-03-28 13:04:02 UTC
Git commit 5cab129da06acf4ba02bd1317d25a8e478523974 by Boudewijn Rempt.
Committed on 28/03/2018 at 13:03.
Pushed by rempt into branch 'master'.

Don't crash if the shape is not valid when writing SVG

M  +4    -0    libs/flake/svg/SvgWriter.cpp

https://commits.kde.org/krita/5cab129da06acf4ba02bd1317d25a8e478523974
Comment 3 Halla Rempt 2018-04-03 11:46:20 UTC
Git commit 92d08e5f8641ae595df10e5c279a232dde4ac51e by Boudewijn Rempt.
Committed on 03/04/2018 at 11:18.
Pushed by rempt into branch 'krita/4.0'.

Don't crash if the shape is not valid when writing SVG
(cherry picked from commit 5cab129da06acf4ba02bd1317d25a8e478523974)

M  +4    -0    libs/flake/svg/SvgWriter.cpp

https://commits.kde.org/krita/92d08e5f8641ae595df10e5c279a232dde4ac51e