Don't crash if the shape is not valid when writing SVG

BUG:392240